@@ -1,10 +1,10 @@
 <?php
 
-// Version: 0.2.0
+// Version: 0.2.1
 
 if( ! $core ) exit;
 
 ?>
 <footer>
-	<a href="https://github.com/maxhaesslein/knot-control/" target="_blank" rel="noopener">Knot Control</a> v.<?= $core->version() ?>
+	<a href="https://github.com/knot-system/knot-control/" target="_blank" rel="noopener">Knot Control</a> v.<?= $core->version() ?>
 </footer>
